--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Title: US Federal Contracts Visualization
 Author: Chuck F
-
 Type: Shiny
+DisplayMode: Showcase
 url: http://cvillehokie.shinyapps.io/contracts
-Description: Data from: # http://download.usaspending.gov/datadownlods/Contracts/988f3e3b/Data_Feed.csv
+Description: FY14 Federal Contracts for Coursera.org
